# VerneDA

./: .gitignore  .gitmodules  CHANGELOG.md  CITATION.cff  CMakeLists.txt  CMakePresets.json  README.md  folder.txt
common/: .gitignore
common/tools-py/: banana.py  euler.py  make_film.py  parse2csv_jsonfile.py  plotter.py  quaternion_histogram.py  reader.py  sphere.py  tools.py
examples/: attitude_ads.json  attitude_loads.json  transformation_pol2cart.json  translation_ads.json  translation_loads.json
scripts/: build.sh  install_3rdparties.sh  matlab  matlab23a  preload_matlab_libs.sh  shortcuts.sh
src/core/: FileProcessor.cpp  FileProcessor.h  delta.cpp  delta.h  enums.h  enums_conversion.cpp  enums_conversion.h  integrator.cpp  integrator.h  problems.cpp  problems.h  quaternion.cpp  quaternion.h  quaternion_temp.cpp  scv.cpp  scv.h  state.cpp  state.h  tbp.cpp  tbp.h  tools.cpp  tools.h  writer.cpp  writer.h
src/core/ads/: Manifold.cpp  Manifold.h  Patch.cpp  Patch.h  SplittingHistory.cpp  SplittingHistory.h  SplittingTimes.cpp  SplittingTimes.h  SuperManifold.cpp  SuperManifold.h  ads.h
src/core/base/: Header_Info.cpp  Header_Info.h  constants.h  enums.h  structs.h
src/core/conversions/: angles.cpp  angles.h
src/core/geometry/: point.cpp  point.h
src/core/json/: json_parser.cpp  json_parser.h
src/core/solids/: cylinder.cpp  cylinder.h  solid.cpp  solid.h
src/core/specs/: args_input.cpp  args_input.h  json_input.h  specifications.cpp  specifications.h  specs.cpp
src/core/tools/: ep.cpp  ep.h  io.cpp  io.h  io_dace.cpp  io_dace.h  math.cpp  math.h  math_temp.cpp  mex_aux.cpp  mex_aux.h  mex_aux_temp.cpp  str.cpp  str.h  vo.cpp  vo.h  vo_temp.cpp
src/main/: Example1-dace_test.cpp  Example2-dace_test.cpp  Example3-dace_test.cpp  Example4-dace_test.cpp  dace_st.cpp  dace_test.cpp  dace_vsad.cpp  dace_vsod.cpp  kepler.cpp  mex_build.m  mex_scaling.m  mex_test.m  mex_vsad.cpp  mex_vsaod.cpp  mex_vsod.cpp
src/main/ads/: testProp.cpp
src/main/ads/tutorials/: free_fall.cpp
src/main/matlab/: env.m  mex_build.m  mex_scaling.m  mex_vsad.m  mex_vsod.m  mex_vsod_DA.m  nearestPSD.m  stddev_ompl.m
src/main/matlab/example/: mex_vsad.m  mex_vsod.m  mex_vsod_DA.m
src/main/matlab/propagation/: plot_noise.m  plot_orbits.m  propagation.m  real_model.slx  simulator.m
src/main/mex/: mex_filter_DA_state.cpp  mex_get_DA_state.cpp  mex_propagate_DA_state.cpp  mex_vsaod.cpp
src/main/mex_cpp/: mex_filter_DA_state.cpp  mex_get_DA_aug_meas_dev.cpp  mex_get_DA_aug_meas_dev2.cpp  mex_get_DA_err_variation.cpp  mex_get_DA_first_moments.cpp  mex_get_DA_fourth_moments.cpp  mex_get_DA_meas_update.cpp  mex_get_DA_predict_spherical.cpp  mex_get_DA_second_moments.cpp  mex_get_DA_second_moments_xy.cpp  mex_get_DA_state.cpp  mex_get_DA_third_moments.cpp  mex_get_samples.cpp  mex_propagate_DA_state.cpp  mex_propagate_DA_state_and_get_samples.cpp  mex_vsaod.cpp
src/main/test/: algebra_basis_vectors.cpp
src/main/tutorials/: Example1-dace_test.cpp  Example2-dace_test.cpp  Example3-dace_test.cpp  Example4-dace_test.cpp
